--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pluggy==1.0.0
 pydantic==1.10.5
 PyMySQL==1.0.2
 pytest==7.3.2
+pytest-asyncio==0.21.0
 python-dotenv==1.0.0
 python-multipart==0.0.5
 PyYAML==6.0
